--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,11 @@
       "Alura\\Architecture\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Alura\\Architecture\\Tests\\": "testes/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^9.3"
   }
